Crash when drag & drop Color in the Image Editor #72440

Closed
opened 2019-12-14 06:20:24 +01:00 by CobraA · 12 comments

System Information
Windows 10 64 Bits.
Graphics card GeForce GTX 1080 Ti.

Blender Version
Broken: version: 2.82.5 hash:38ad1c4d339d
Worked: 2.81

Short description of error
Color Drop on the image leads to a crash.
Exact steps for others to reproduce the error

  • Create a new Image in the Editor.
  • Drag & Drop Color from the Color picker onto the Canvas like in the image below.

{F8218463 size = full}

**System Information** Windows 10 64 Bits. Graphics card GeForce GTX 1080 Ti. **Blender Version** Broken: version: 2.82.5 hash:38ad1c4d339d Worked: 2.81 **Short description of error** Color Drop on the image leads to a crash. **Exact steps for others to reproduce the error** - Create a new Image in the Editor. - Drag & Drop Color from the Color picker onto the Canvas like in the image below. {[F8218463](https://archive.blender.org/developer/F8218463/DD.jpg) size = full}
Author

Added subscriber: @CobraA

Added subscriber: @CobraA

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

I cannot reproduce the issue here. Dropping the color appears to work normally.

I cannot reproduce the issue here. Dropping the color appears to work normally.

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes

I'm able to reproduce the crash with current master. In a debug build, assertion is triggered:

BLI_assert failed: source/blender/blenkernel/intern/undo_system.c:457, BKE_undosys_step_push_init_with_type(), at 'ustack->step_init == ((void *)0)'
I'm able to reproduce the crash with current master. In a debug build, assertion is triggered: ``` BLI_assert failed: source/blender/blenkernel/intern/undo_system.c:457, BKE_undosys_step_push_init_with_type(), at 'ustack->step_init == ((void *)0)' ```
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, checking...

Can confirm, checking...
Member

Looks like this is also caused by c30d6571bb

paint_2d_bucket_fill is called with NULL ImagePaintState from ED_imapaint_bucket_fill...

1  paint_2d_transform_mouse  paint_image_2d.c  1565 0x3a099ad 
2  paint_2d_bucket_fill      paint_image_2d.c  1904 0x3a0aae0 
3  ED_imapaint_bucket_fill   paint_image.c     1315 0x3a03ef1 
4  drop_color_invoke         interface_ops.c   1754 0x3b67ae6 
5  wm_operator_invoke        wm_event_system.c 1441 0x2ffbd68 
6  wm_operator_call_internal wm_event_system.c 1688 0x2ffc66b 
7  wm_handlers_do_intern     wm_event_system.c 2773 0x2fff287 
8  wm_handlers_do            wm_event_system.c 2993 0x2fffdb1 
9  wm_event_do_handlers      wm_event_system.c 3480 0x3001405 
10 WM_main                   wm.c              417  0x2ff50c9 
11 main                      creator.c         496  0x2d22f56 


Note there is another assert lurking around [which has been there for quite some time though and is more or less unrelated], namely:

BLI_assert failed: /blender/source/blender/blenkernel/intern/undo_system.c:457, BKE_undosys_step_push_init_with_type(), at 'ustack->step_init == ((void *)0)'

ustack->step_init is not NULL (already has Drop Color, wants to do for ED_imapaint_bucket_fill as well, so seems like two undo pushes where only one is allowed?)

1  raise                                                       0x7ffff1ae4e35 
2  abort                                                       0x7ffff1acf895 
3  BKE_undosys_step_push_init_with_type undo_system.c     457  0x3f9fdeb      
4  image_undo_push_begin                image_undo.c      1017 0x3e95f0f      
5  ED_image_undo_push_begin             image_undo.c      1026 0x3e95fa9      
6  ED_imapaint_bucket_fill              paint_image.c     1308 0x3b5edcf      
7  drop_color_invoke                    interface_ops.c   1700 0x3d67d3c      
8  wm_operator_invoke                   wm_event_system.c 1441 0x32e9559      
9  wm_operator_call_internal            wm_event_system.c 1688 0x32e9e5c      
10 wm_handlers_do_intern                wm_event_system.c 2773 0x32eca78      
11 wm_handlers_do                       wm_event_system.c 2993 0x32ed5a2      
12 wm_event_do_handlers                 wm_event_system.c 3480 0x32eebf6      
13 WM_main                              wm.c              417  0x32e1ba2      
14 main                                 creator.c         496  0x2d17ef6   
Looks like this is also caused by c30d6571bb `paint_2d_bucket_fill` is called with NULL `ImagePaintState` from `ED_imapaint_bucket_fill`... ``` 1 paint_2d_transform_mouse paint_image_2d.c 1565 0x3a099ad 2 paint_2d_bucket_fill paint_image_2d.c 1904 0x3a0aae0 3 ED_imapaint_bucket_fill paint_image.c 1315 0x3a03ef1 4 drop_color_invoke interface_ops.c 1754 0x3b67ae6 5 wm_operator_invoke wm_event_system.c 1441 0x2ffbd68 6 wm_operator_call_internal wm_event_system.c 1688 0x2ffc66b 7 wm_handlers_do_intern wm_event_system.c 2773 0x2fff287 8 wm_handlers_do wm_event_system.c 2993 0x2fffdb1 9 wm_event_do_handlers wm_event_system.c 3480 0x3001405 10 WM_main wm.c 417 0x2ff50c9 11 main creator.c 496 0x2d22f56 ``` ---- ---- Note there is another assert lurking around [which has been there for quite some time though and is more or less unrelated], namely: `BLI_assert failed: /blender/source/blender/blenkernel/intern/undo_system.c:457, BKE_undosys_step_push_init_with_type(), at 'ustack->step_init == ((void *)0)'` `ustack->step_init` is not NULL (already has `Drop Color`, wants to do for `ED_imapaint_bucket_fill` as well, so seems like two undo pushes where only one is allowed?) ``` 1 raise 0x7ffff1ae4e35 2 abort 0x7ffff1acf895 3 BKE_undosys_step_push_init_with_type undo_system.c 457 0x3f9fdeb 4 image_undo_push_begin image_undo.c 1017 0x3e95f0f 5 ED_image_undo_push_begin image_undo.c 1026 0x3e95fa9 6 ED_imapaint_bucket_fill paint_image.c 1308 0x3b5edcf 7 drop_color_invoke interface_ops.c 1700 0x3d67d3c 8 wm_operator_invoke wm_event_system.c 1441 0x32e9559 9 wm_operator_call_internal wm_event_system.c 1688 0x32e9e5c 10 wm_handlers_do_intern wm_event_system.c 2773 0x32eca78 11 wm_handlers_do wm_event_system.c 2993 0x32ed5a2 12 wm_event_do_handlers wm_event_system.c 3480 0x32eebf6 13 WM_main wm.c 417 0x32e1ba2 14 main creator.c 496 0x2d17ef6 ```
Member

Added subscribers: @LukasStockner, @ideasman42

Added subscribers: @LukasStockner, @ideasman42
Member

CC @LukasStockner (because of UDIM commit)
CC @ideasman42 (because of double undo push)

CC @LukasStockner (because of UDIM commit) CC @ideasman42 (because of double undo push)

This issue was referenced by bbc97fc533

This issue was referenced by bbc97fc533d03a7242d3172a6780794a28e20e7e
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Lukas Stockner self-assigned this 2019-12-16 12:47:16 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72440
No description provided.