Fix T72440: Dragging & dropping color in the Image Editor crashes

This was caused by a call to paint_2d_bucket_fill that I missed in the
UDIM changes.

Now, this feature does not only not crash, but it even works with tiled
images!